build(fix): switch to node version manager

--- a/.ansible/playbooks/deploy.yml
+++ b/.ansible/playbooks/deploy.yml
@@ -42,6 +42,7 @@
         dest: "{{remote_path}}/current"
         state: link
         force: yes
+      no_log: True
 
     - name: Start PM2 server
       shell: |
