--- a/.ansible/playbooks/setup-node.yml
+++ b/.ansible/playbooks/setup-node.yml
@@ -9,10 +9,12 @@
     - name: Install NVM
       shell: >
         curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+      args:
+        creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
       no_log: True
 
     - name: Install NodeJs
-      shell: "nvm install {{ NODEJS_VERSION }}"
+      shell: "source {{ ansible_env.HOME }}/.nvm/nvm.sh && nvm install {{ NODEJS_VERSION }}"
 
     - name: Install yarn
       shell: npm install yarn -g
