--- a/.ansible/playbooks/setup-node.yml
+++ b/.ansible/playbooks/setup-node.yml
@@ -14,7 +14,7 @@
       no_log: True
 
     - name: Install NodeJs
-      shell: "source {{ ansible_env.HOME }}/.nvm/nvm.sh && nvm install {{ NODEJS_VERSION }}"
+      shell: ". {{ ansible_env.HOME }}/.nvm/nvm.sh && nvm install {{ NODEJS_VERSION }}"
 
     - name: Install yarn
       shell: npm install yarn -g
