--- a/.ansible/playbooks/setup-node.yml
+++ b/.ansible/playbooks/setup-node.yml
@@ -16,7 +16,7 @@
     - name: Install NodeJs
       shell: |
         ". {{ ansible_env.HOME }}/.nvm/nvm.sh"
-        "export NVM_DIR="{{ ansible_env.HOME }}/.nvm""
+        export NVM_DIR="{{ ansible_env.HOME }}/.nvm"
         "nvm install {{ NODEJS_VERSION }}"
 
     - name: Install yarn
