--- a/.ansible/playbooks/setup-node.yml
+++ b/.ansible/playbooks/setup-node.yml
@@ -7,20 +7,22 @@
   tasks:
 
     - name: Install NVM
-      shell: >
+      ansible.builtin.shell: >
         curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
       args:
         creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
       no_log: True
 
     - name: Install NodeJs
-      shell:  |
+      ansible.builtin.shell:  |
         . "{{ ansible_env.HOME }}/.nvm/nvm.sh"
         export NVM_DIR="{{ ansible_env.HOME }}/.nvm"
         nvm install {{ NODEJS_VERSION }}
 
     - name: Install global node packages
-      shell: "{{ ansible_env.HOME }}/.nvm/versions/node/$(nvm current)/bin/npm install {{item}} -g"
+      ansible.builtin.shell:  |
+        . "{{ ansible_env.HOME }}/.nvm/nvm.sh"
+        "{{ ansible_env.HOME }}/.nvm/versions/node/$(nvm current)/bin/npm install {{item}} -g"
       loop:
         - yarn
         - pm2
