--- a/.ansible/playbooks/setup-node.yml
+++ b/.ansible/playbooks/setup-node.yml
@@ -23,7 +23,9 @@
       ansible.builtin.shell:  |
         . "{{ ansible_env.HOME }}/.nvm/nvm.sh"
         export NVM_DIR="{{ ansible_env.HOME }}/.nvm"
-        "{{ ansible_env.HOME }}/.nvm/versions/node/$(nvm current)/bin/npm install {{item}} -g"
+        declare version
+        version=$(nvm current)
+        "{{ ansible_env.HOME }}/.nvm/versions/node/$version/bin/npm install {{item}} -g"
       loop:
         - yarn
         - pm2
