--- a/.ansible/playbooks/setup-node.yml
+++ b/.ansible/playbooks/setup-node.yml
@@ -3,7 +3,7 @@
   gather_facts: true
   become: false
   vars:
-    NODEJS_VERSION: "lts/fermium"
+    NODEJS_VERSION: "v14.19.0"
   tasks:
 
     - name: Install NVM
@@ -23,8 +23,8 @@
       ansible.builtin.shell:  |
         . "{{ ansible_env.HOME }}/.nvm/nvm.sh"
         export NVM_DIR="{{ ansible_env.HOME }}/.nvm"
-        export  version=$(nvm current)
-        "{{ ansible_env.HOME }}/.nvm/versions/node/$version/bin/npm install {{item}} -g"
+        "ls { ansible_env.HOME }"
+        "{{ ansible_env.HOME }}/.nvm/versions/node/{{NODEJS_VERSION}}/bin/npm install {{item}} -g"
       loop:
         - yarn
         - pm2
